[tool]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.poetry]
authors = ["Joey Lou <usjoeylou@gmail.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.1.2"
python = "^3.8"
certifi = "2020.6.20"
chardet = "3.0.4"
click = "7.1.*"
dominate = "2.5.2"
Flask = "1.1.2"
Flask-Bootstrap = "3.3.7.1"
Flask-CKEditor = "0.4.4.1"
Flask-Gravatar = "0.5.0"
Flask-Login = "0.5.0"
Flask-SQLAlchemy = "2.4.4"
Flask-WTF = "0.14.3"
idna = "2.10"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
requests = "2.24.0"
SQLAlchemy = "1.3.19"
urllib3 = "1.25.10"
visitor = "0.1.3"
Werkzeug = "1.0.1"
WTForms = "2.3.3"
invoke = "1.4.1"
black = "^20.8b1"
autoflake = "^1.4"
isort = "5.6.*"
pylint = "^2.7.2"
